# reactor-face-swap

./: .gitignore  README.md  __init__.py  folder_paths.py  pyproject.toml  reactor_api.py  reactor_utils.py
comfy/: __init__.py  model_management.py  utils.py
modules/: processing.py
r_basicsr/: __init__.py
r_basicsr/utils/: __init__.py  logger.py
r_chainner/: model_loading.py  types.py
r_chainner/archs/face/: gfpganv1_clean_arch.py
scripts/: reactor_logger.py  reactor_swapper.py
scripts/r_archs/: codeformer_arch.py  vqgan_arch.py
scripts/r_faceboost/: restorer.py  swapper.py
