[project]
name = "face_swap"
description = "(SFW-Friendly) The Fast and Simple Face Swap Extension Node for ComfyUI, based on ReActor SD-WebUI Face Swap Extension"
version = "0.6.2-a3"
license = { file = "LICENSE" }
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "insightface==0.7.3",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "opencv-python>=4.7.0.72",
    "numpy>=2.3.3",
    "segment_anything",
    "albumentations>=1.4.16",
    "ultralytics",
    "safetensors==0.6.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["reactor_api", "reactor_utils", "reactor_patcher", "folder_paths"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "r_facelib*", "r_basicsr*", "r_chainner*", "comfy*", "modules*"]

[project.urls]
Repository = "https://github.com/Gourieff/ComfyUI-ReActor"

[tool.comfy]
PublisherId = "gourieff"
DisplayName = "ComfyUI-ReActor"
Icon = ""